fixed movie-card:hover on mobile

--- a/src/sass/components/_main-home.scss
+++ b/src/sass/components/_main-home.scss
@@ -64,7 +64,11 @@
 }
 
 .prewiev-card:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
+
+  @media screen and (min-width: 768px) {
+    transform: scale(1.1);
+  }
 }
 
 .isHide {
